Fix #664 - Text overflow in media headings
Merge in kesara's changes to fix the media heading overflows on edit
and delete pages for ticket #664.

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -394,6 +394,12 @@ text-align: center;
   margin-right: auto;
 }
 
+.form_box > h1, .form_box_xl > h1 {
+  /* Fix header overflowing issue. */
+  overflow: hidden;
+  text-overflow: ellipsis
+}
+
 .form_box_xl {
   max-width: 460px;
 }
